@@ -3,6 +3,8 @@ update-manager (1:0.124) UNRELEASEDkarmic; urgency=low
   * AutoUpgradeTester:
     - add kubuntu, main-all, lts-server, lts-ubuntu profiles
   * ported to gtkbuilder
+  * UpdateManager/UpdateManager.py:
+    - warn if running on battery (LP: #377697)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 23:12:45 +0200
 
